# easycommerce_server

./: Cargo.toml  build.sh
migrations/2023-02-02-191014_roles/: up.sql
migrations/2023-02-02-191018_users/: up.sql
migrations/2023-02-02-191023_permissions/: up.sql
migrations/2023-02-02-191037_role_permissions/: up.sql
migrations/2023-02-03-101803_create_roles/: up.sql
migrations/2023-02-03-102030_create_permissions/: up.sql
migrations/2023-02-03-110237_create_role_permissions/: up.sql
migrations/2023-02-03-124141_create_users/: up.sql
migrations/2023-02-05-234748_create_session/: up.sql
migrations/2023-02-07-072242_create_stores/: up.sql
migrations/2023-02-07-072752_create_user_stores/: down.sql  up.sql
migrations/2023-02-09-065856_create_products/: up.sql
migrations/2023-02-09-065906_create_inventory/: up.sql
src/: main.rs  models.rs  schema.rs
src/config/: hashing.rs
src/extractors/: authentication_token.rs
src/scopes/: store.rs  user.rs
