[package]
name = "easycommerce_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
jsonwebtoken = "8.2.0"
serde = "1.0"
chrono = { version = "0.4.23", features = ["serde"] }
actix-cors = "0.6.4"
dotenv = "0.15.0"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
r2d2 = "0.8.10"
env_logger = "0.10.0"
rand = "0.8.5"
